--- a/README
+++ b/README
@@ -1,3 +1,3 @@
-NCRC Activity Sensing & Visualization Project for the University of Michigan’s NCRC Complex
+Activity Sensing & Visualization Project for the University of Michigan’s NCRC Complex
 Team: Evan Kerrigan & Munaf Assaf
 {kerrigev, munaf}@umich.edu
