--- a/README
+++ b/README
@@ -1,3 +1,3 @@
 Activity Sensing & Visualization Project for the University of Michigan’s NCRC Complex
-Team: Evan Kerrigan & Munaf Assaf
-{kerrigev, munaf}@umich.edu
+Team: Evan Kerrigan, Munaf Assaf and Chuan-Che Huang (Jeff)
+{kerrigev, munaf, chuanche}@umich.edu
